# agriexport-intelligence

./: .gitignore  LICENSE  README.md  explore.py  pyproject.toml
.github/workflows/: ci.yml
dashboards/: README.md
dbt/: dbt_project.yml  profiles.example.yml
dbt/models/marts/: _models.yml
dbt/models/staging/: _sources.yml  stg_comexstat__exports.sql
docs/: architecture.md  staging.md
ingestion/: __init__.py  __main__.py  bcb.py  cepea.py  comexstat.py  commodity_prices.py
ingestion/tests/: test_smoke.py
